--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.png" />
-    <meta name="theme-color" content="#000000" />
+    <meta name="theme-color" content="#96b093" />
     <meta
       name="description"
       content="Web site created for wedding Alex and Lolita"
